--- a/Samples/StreamRecorder/StreamRecorderApp/StreamRecorder.vcxproj.filters
+++ b/Samples/StreamRecorder/StreamRecorderApp/StreamRecorder.vcxproj.filters
@@ -128,6 +128,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Media Include="Media\Meshes\coord_axes.obj" />
+    <Media Include="Media\Meshes\coord_axes.obj">
+      <Filter>Media</Filter>
+    </Media>
   </ItemGroup>
 </Project>
