Gyro and Mag sensors
Visualize Gyro

Camera

--- a/Samples/SensorVisualization/SensorVisualization/SensorVisualization.vcxproj
+++ b/Samples/SensorVisualization/SensorVisualization/SensorVisualization.vcxproj
@@ -213,6 +213,8 @@
     <ClInclude Include="Common\CameraResources.h" />
     <ClInclude Include="Common\StepTimer.h" />
     <ClInclude Include="Content\AccelRenderer.h" />
+    <ClInclude Include="Content\GyroRenderer.h" />
+    <ClInclude Include="Content\MagRenderer.h" />
     <ClInclude Include="Content\VectorModel.h" />
     <ClInclude Include="Content\XAxisModel.h" />
     <ClInclude Include="Content\SlateCameraRenderer.h" />
@@ -233,6 +235,8 @@
     <ClCompile Include="Common\DeviceResources.cpp" />
     <ClCompile Include="Common\CameraResources.cpp" />
     <ClCompile Include="Content\AccelRenderer.cpp" />
+    <ClCompile Include="Content\GyroRenderer.cpp" />
+    <ClCompile Include="Content\MagRenderer.cpp" />
     <ClCompile Include="Content\VectorModel.cpp" />
     <ClCompile Include="Content\XAxisModel.cpp" />
     <ClCompile Include="Content\SlateCameraRenderer.cpp" />
